Fix root container height issue on Safari

--- a/client/app/components/ApplicationArea/ApplicationLayout/index.less
+++ b/client/app/components/ApplicationArea/ApplicationLayout/index.less
@@ -7,7 +7,7 @@ body #application-root {
   flex-direction: row;
   justify-content: stretch;
   padding-bottom: 0 !important;
-  height: 100vh;
+  min-height: 100vh;
 
   .application-layout-side-menu {
     height: 100vh;
